# seals_dev

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject_with_deps.toml  setup.py
scripts/: ingest_manage_csv.py  publish_to_pypi.py
seals/: compile_cython_functions.py  config.py  ecosystem_services.py  ken_cropland.py  ken_current_crops.py  ken_invest.py  ken_mask_land_inputs.py  ken_max_land.py  ken_max_land_esa.py  ken_stakeholder2seals.ipynb  run_ken_2020_2050.py  run_ken_adjust_base_lulc.py  run_ken_poll_shock.py  run_ken_poll_shock_v1.py  run_ken_regional_projections.py  run_ken_standard.py  run_seals_custom_coarse_algorithm.py  run_seals_global.py  run_seals_luh2_300m_global.py  run_seals_luh2_300m_global_post_processing.py  run_seals_standard.py  run_seals_standard_fast.py  run_t_all_supported_allocations.py  run_t_multiple.py  run_t_standard.py  run_t_standard_fast.py  run_t_vector_aoi.py  run_test_all_supported_allocations.py  run_test_custom_coarse_algorithm.py  run_test_examples.py  run_test_multiple.py  run_test_standard.py  run_test_standard_fast.py  run_test_vector_aoi.py  seals_api_input.md  seals_api_parsing.py  seals_cython_functions.c  seals_cython_functions.c_BORK  seals_cython_functions.cp310-win_amd64.pyd_BORK  seals_cython_functions.pyx  (+11 more)
seals/old_run_files/: run_global_ssps.py  run_t_all_supported_allocations.py
seals/tests/: test_api_utils.py
seals_tests/: test_seals.py  test_seals_fast.py
sealsmodel/: run_test_custom_coarse_algorithm.py  run_test_multiple.py  run_test_standard.py  run_test_standard_fast.py  run_test_vector_aoi.py  seals_cython_functions.c  seals_cython_functions.pyx  seals_initialize_project.py  seals_main.py  seals_process_coarse_timeseries.py  seals_utils.py  seals_visualization_functions.py  seals_visualization_tasks.py
