[project]
name = "sealsmodel"
description = "Land-use change model and downscaler"
requires-python = ">=3.6"
readme = "README.md"
license-files = ["LICENSE"]
maintainers = [
        {name = "Justin Andrew Johnson"}
]
keywords = ["geospatial", "raster", "shapefile"]
dependencies = [

]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Programming Language :: Cython",
        "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/jandrewjohnson/seals_dev"

[build-system]
requires = [
        "setuptools>=74.1", "wheel", "cython>3.0.0",
        'oldest-supported-numpy; python_version<"3.8"',
        'numpy>2; python_version>="3.8"',
]

[tool.setuptools]
packages = ["seals"]
package-data = { "seals" = ["*.pyx"] }
ext-modules = [
    { name = "seals.seals_cython_functions", sources = ["seals/seals_cython_functions.pyx"] }
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
